# enovapower

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: usage.md
enova/: __init__.py  client.py  storage.py
enovapower/: __init__.py  async_client.py  client.py  exceptions.py  logger.py  models.py  parsers.py  protocols.py  storage.py
hooks/: pre-commit
tests/: conftest.py  test_async_client.py  test_client.py  test_logger.py  test_storage.py
tests/data/: SmartMeter1234567890_2026-03-2712.47.47.csv  SmartMeter1234567890_daily_2026-03-2713.55.53.csv
