[project]
name = "enovapower"
version = "0.2.0"
description = "Python client for downloading electricity usage data from Enova Power"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
