[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enovapower"
version = "0.3.0"
description = "Python client for downloading electricity usage data from Enova Power"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Hani Hawari" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/hanihawari/enovapower"
Repository = "https://github.com/hanihawari/enovapower"
Issues = "https://github.com/hanihawari/enovapower/issues"

[tool.hatch.build.targets.wheel]
packages = ["enovapower"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
